tests/machine/x/cobol/let_and_print.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. LET-AND-PRINT.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 A PIC 9 VALUE 10.
       01 B PIC 9 VALUE 20.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE TMP = A + B
       DISPLAY TMP
       STOP RUN.
